--- a/DESARROLLO/layout/activity_main.xml
+++ b/DESARROLLO/layout/activity_main.xml
@@ -8,11 +8,11 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/button_login_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="360dp"
-        android:text="@string/button_login"
+        android:text="@string/button_login_1"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -24,7 +24,7 @@
         android:layout_marginTop="156dp"
         android:text="@string/button_sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_login"
+        app:layout_constraintTop_toBottomOf="@+id/button_login_1"
         app:layout_constraintVertical_bias="0.276"
         tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
